--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "terrars-andrewbaxter-stripe"
 edition = "2021"
-version = "0.1.0"
+version = "0.1.1"
 description = "Pre-generated Terrars Stripe bindings"
 readme = "readme.md"
 license = "ISC"
@@ -10,7 +10,7 @@ repository = "https://github.com/andrewbaxter/terrars-andrewbaxter-stripe"
 [dependencies]
 serde = "1.0.151"
 serde_json = "1.0.91"
-terrars = "0.0.9"
+terrars = "*"
 
 [features]
 account = []
